# spinchain

./: .gitignore  CLAUDE.md  PUBLIC_API.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: analyze-spinchain.md  spinchain-bench.md  spinchain-status.md  spinchain-trace.md  test-spinchain.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: cache.py  chain_generator.py  config.py  diagnostics.py  results.py  run.py  scoring.py  sweep.py
benchmarks/datasets/: __init__.py  base.py  gsm8k.py
benchmarks/extractors/: __init__.py  answer_extractor.py
benchmarks/methods/: __init__.py  base.py  majority_vote.py  random_selection.py  spinchain_method.py  union.py
docs/: benchmark-harness.md  hamiltonian-design.md  live-demo.md  pipeline-stages.md  qubo-formulation.md  qubo-signal-inventory.md  testing-and-benchmarks.md
docs/superpowers/specs/: 2026-04-12-mcp-server-refactor-design.md
examples/: basic_usage.py
skills/analyze-spinchain/: SKILL.md
skills/spinchain-bench/: SKILL.md
skills/spinchain-optimize/: SKILL.md
skills/spinchain-status/: SKILL.md
skills/spinchain-trace/: SKILL.md
skills/test-spinchain/: SKILL.md
src/spinchain/: __init__.py  __main__.py  adaptive.py  analyze.py  error_logger.py  server.py  tracing.py
src/spinchain/formulation/: __init__.py  coefficient_builder.py  fragment_extractor.py  qubo_builder.py
src/spinchain/pipeline/: __init__.py
tests/: conftest.py  test_analyze.py  test_coefficient_builder.py  test_qubo_builder.py  test_stability_ranking.py  test_tracing.py
(+3 files in other folders)
