[project]
name = "spinchain"
version = "0.1.1"
description = "Inference-time reasoning optimization using QUBO/Ising formulations"
readme = "README.md"
authors = [
    { name = "Ameya Khot", email = "ameyakhot18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "dwave-neal>=0.6.0",
    "dimod>=0.12.0",
    "pyqubo>=1.5.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
standalone = [
    "anthropic>=0.42.0",
]
quantum = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.15.0",
    "qiskit-optimization>=0.6.0",
]

[project.scripts]
spinchain-server = "spinchain.server:main"

[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
